# music-ratatui

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
.zed/: debug.json
src/: config.rs  filefinder.rs  main.rs  searchhandler.rs  selecthandler.rs  song.rs  songs.rs  ui.rs
src/display_handlers/: folder_handler.rs
src/events/: keyboard.rs  mod.rs  musicplayer.rs
src/fetch/: downloader.rs  mod.rs  search.rs
src/utils/: mod.rs  selecthandler.rs
src/ytm/: mod.rs  query.rs
