[package]
name = "music-ratatui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
id3 = "1.16.3"
ratatui = "0.29.0"
reqwest = "0.12.24"
souvlaki = "0.8.3"
tokio = {version = "1.48.0", features = ["full"]}
vlc-rs = "0.3.0"
musicbrainz_rs = "0.12.0"
rusty_ytdl = "0.7.4"
yt-dlp = "1.4.4"
serde = "1.0.228"
